; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-context-data.c_test_context_data4_finalize.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-context-data.c_test_context_data4_finalize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_context_data4_finalize_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_context_data4_finalize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_context_data4_finalize(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @test_context_data4_finalize_called, align 4
  %4 = icmp ne i32 %3, 0
  %5 = xor i1 %4, true
  %6 = zext i1 %5 to i32
  %7 = call i32 @TEST_ASSERT(i32 %6)
  store i32 1, i32* @test_context_data4_finalize_called, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = icmp eq i8* %8, null
  %10 = zext i1 %9 to i32
  %11 = call i32 @TEST_ASSERT(i32 %10)
  ret void
}

declare dso_local i32 @TEST_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
